aws/cloudformation/templates/fixtures/cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Infrastructure for a BOSH deployment with an ELB.",
    "Mappings": {
        "AWSNATAMI": {
            "ap-northeast-1": {"AMI": "ami-f885ae96"},
            "ap-northeast-2": {"AMI": "ami-4118d72f"},
            "ap-southeast-1": {"AMI": "ami-e2fc3f81"},
            "ap-southeast-2": {"AMI": "ami-e3217a80"},
            "eu-central-1": {"AMI": "ami-0b322e67"},
            "eu-west-1": {"AMI": "ami-c0993ab3"},
            "sa-east-1": {"AMI": "ami-8631b5ea"},
            "us-east-1": {"AMI": "ami-68115b02"},
            "us-west-1": {"AMI": "ami-ef1a718f"},
            "us-west-2": {"AMI": "ami-77a4b816"}
        }
    },
    "Outputs": {
        "BOSHUserAccessKey": {"Value": {"Ref": "BOSHUserAccessKey"}},
        "BOSHUserSecretAccessKey": {
            "Value": {"Fn::GetAtt": ["BOSHUserAccessKey", "SecretAccessKey"]}
        },
		"BOSHSubnet": {"Value": {"Ref": "BOSHSubnet"}},
		"BOSHSubnetAZ": {
			"Value": {"Fn::GetAtt": ["BOSHSubnet", "AvailabilityZone"]}
		},
		"BOSHEIP": {"Value": {"Ref": "BOSHEIP"}},
		"BOSHSecurityGroup": {"Value": {"Ref": "BOSHSecurityGroup"}}
    },
    "Parameters": {
        "BOSHInboundCIDR": {
            "Default": "0.0.0.0/0",
            "Description": "CIDR to permit access to BOSH (e.g. 205.103.216.37/32 for your specific IP)",
            "Type": "String"
        },
        "BOSHSubnetCIDR": {
            "Default": "10.0.0.0/24",
            "Description": "CIDR block for the BOSH subnet.",
            "Type": "String"
        },
        "InternalSubnetCIDR": {
            "Default": "10.0.16.0/20",
            "Description": "CIDR block for the Internal subnet.",
            "Type": "String"
        },
        "LoadBalancerSubnetCIDR": {
            "Default": "10.0.2.0/24",
            "Description": "CIDR block for the ELB subnet.",
            "Type": "String"
        },
        "SSHKeyPairName": {
            "Default": "keypair-name",
            "Description": "SSH KeyPair to use for instances",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "VPCCIDR": {
            "Default": "10.0.0.0/16",
            "Description": "CIDR block for the VPC.",
            "Type": "String"
        }
    },
    "Resources": {
        "BOSHRoute": {
            "DependsOn": "VPCGatewayInternetGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {"Ref": "VPCGatewayInternetGateway"},
                "RouteTableId": {"Ref": "BOSHRouteTable"}
            },
            "Type": "AWS::EC2::Route"
        },
        "BOSHRouteTable": {
            "Properties": {"VpcId": {"Ref": "VPC"}},
            "Type": "AWS::EC2::RouteTable"
        },
        "BOSHSecurityGroup": {
            "Properties": {
                "GroupDescription": "BOSH",
                "SecurityGroupEgress": [],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {"Ref": "BOSHInboundCIDR"},
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": {"Ref": "BOSHInboundCIDR"},
                        "FromPort": "6868",
                        "IpProtocol": "tcp",
                        "ToPort": "6868"
                    },
                    {
                        "CidrIp": {"Ref": "BOSHInboundCIDR"},
                        "FromPort": "25555",
                        "IpProtocol": "tcp",
                        "ToPort": "25555"
                    },
                    {
                        "FromPort": "0",
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                        "ToPort": "65535"
                    },
                    {
                        "FromPort": "0",
                        "IpProtocol": "udp",
                        "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                        "ToPort": "65535"
                    }
                ],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "BOSHSubnet": {
            "Properties": {
                "CidrBlock": {"Ref": "BOSHSubnetCIDR"},
                "Tags": [{"Key": "Name", "Value": "BOSH"}],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::Subnet"
        },
        "BOSHSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {"Ref": "BOSHRouteTable"},
                "SubnetId": {"Ref": "BOSHSubnet"}
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "BOSHUser": {
            "Properties": {
                "Policies": [
                    {
                        "PolicyDocument": {
                            "Statement": [
                                {
                                    "Action": [
                                        "ec2:AssociateAddress",
                                        "ec2:AttachVolume",
                                        "ec2:CreateVolume",
                                        "ec2:DeleteSnapshot",
                                        "ec2:DeleteVolume",
                                        "ec2:DescribeAddresses",
                                        "ec2:DescribeImages",
                                        "ec2:DescribeInstances",
                                        "ec2:DescribeRegions",
                                        "ec2:DescribeSecurityGroups",
                                        "ec2:DescribeSnapshots",
                                        "ec2:DescribeSubnets",
                                        "ec2:DescribeVolumes",
                                        "ec2:DetachVolume",
                                        "ec2:CreateSnapshot",
                                        "ec2:CreateTags",
                                        "ec2:RunInstances",
                                        "ec2:TerminateInstances"
                                    ],
                                    "Effect": "Allow",
                                    "Resource": "*"
                                },
                                {
                                    "Action": ["elasticloadbalancing:*"],
                                    "Effect": "Allow",
                                    "Resource": "*"
                                }
                            ],
                            "Version": "2012-10-17"
                        },
                        "PolicyName": "aws-cpi"
                    }
                ]
            },
            "Type": "AWS::IAM::User"
        },
        "BOSHUserAccessKey": {
            "Properties": {"UserName": {"Ref": "BOSHUser"}},
            "Type": "AWS::IAM::AccessKey"
        },
        "InternalRoute": {
            "DependsOn": "NATInstance",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId": {"Ref": "NATInstance"},
                "RouteTableId": {"Ref": "InternalRouteTable"}
            },
            "Type": "AWS::EC2::Route"
        },
        "InternalRouteTable": {
            "Properties": {"VpcId": {"Ref": "VPC"}},
            "Type": "AWS::EC2::RouteTable"
        },
        "InternalSecurityGroup": {
            "Properties": {
                "GroupDescription": "Internal",
                "SecurityGroupEgress": [],
                "SecurityGroupIngress": [
                    {
                        "FromPort": "0",
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {"Ref": "WebSecurityGroup"},
                        "ToPort": "65535"
                    },
                    {
                        "FromPort": "0",
                        "IpProtocol": "udp",
                        "SourceSecurityGroupId": {"Ref": "WebSecurityGroup"},
                        "ToPort": "65535"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "-1",
                        "IpProtocol": "icmp",
                        "ToPort": "-1"
                    }
                ],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "InternalSecurityGroupIngressTCPfromBOSH": {
            "Properties": {
                "FromPort": "0",
                "GroupId": {"Ref": "InternalSecurityGroup"},
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {"Ref": "BOSHSecurityGroup"},
                "ToPort": "65535"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "InternalSecurityGroupIngressTCPfromSelf": {
            "Properties": {
                "FromPort": "0",
                "GroupId": {"Ref": "InternalSecurityGroup"},
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                "ToPort": "65535"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "InternalSecurityGroupIngressUDPfromBOSH": {
            "Properties": {
                "FromPort": "0",
                "GroupId": {"Ref": "InternalSecurityGroup"},
                "IpProtocol": "udp",
                "SourceSecurityGroupId": {"Ref": "BOSHSecurityGroup"},
                "ToPort": "65535"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "InternalSecurityGroupIngressUDPfromSelf": {
            "Properties": {
                "FromPort": "0",
                "GroupId": {"Ref": "InternalSecurityGroup"},
                "IpProtocol": "udp",
                "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                "ToPort": "65535"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "InternalSubnet": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": ["0", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]
                },
                "CidrBlock": {"Ref": "InternalSubnetCIDR"},
                "Tags": [{"Key": "Name", "Value": "Internal"}],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::Subnet"
        },
        "InternalSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {"Ref": "InternalRouteTable"},
                "SubnetId": {"Ref": "InternalSubnet"}
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "LoadBalancerRoute": {
            "DependsOn": "VPCGatewayInternetGateway",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {"Ref": "VPCGatewayInternetGateway"},
                "RouteTableId": {"Ref": "LoadBalancerRouteTable"}
            },
            "Type": "AWS::EC2::Route"
        },
        "LoadBalancerRouteTable": {
            "Properties": {"VpcId": {"Ref": "VPC"}},
            "Type": "AWS::EC2::RouteTable"
        },
        "LoadBalancerSubnet": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": ["0", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]
                },
                "CidrBlock": {"Ref": "LoadBalancerSubnetCIDR"},
                "Tags": [{"Key": "Name", "Value": "LoadBalancer"}],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::Subnet"
        },
        "LoadBalancerSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": {"Ref": "LoadBalancerRouteTable"},
                "SubnetId": {"Ref": "LoadBalancerSubnet"}
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "BOSHEIP": {"Properties": {"Domain": "vpc"}, "Type": "AWS::EC2::EIP"},
        "NATEIP": {
            "Properties": {"Domain": "vpc", "InstanceId": {"Ref": "NATInstance"}},
            "Type": "AWS::EC2::EIP"
        },
        "NATInstance": {
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": ["AWSNATAMI", {"Ref": "AWS::Region"}, "AMI"]
                },
                "InstanceType": "m4.large",
                "KeyName": {"Ref": "SSHKeyPairName"},
                "SecurityGroupIds": [{"Ref": "NATSecurityGroup"}],
                "SourceDestCheck": false,
                "SubnetId": {"Ref": "BOSHSubnet"},
                "Tags": [{"Key": "Name", "Value": "NAT"}]
            },
            "Type": "AWS::EC2::Instance"
        },
        "NATSecurityGroup": {
            "Properties": {
                "GroupDescription": "NAT",
                "SecurityGroupEgress": [],
                "SecurityGroupIngress": [
                    {
                        "FromPort": "0",
                        "IpProtocol": "tcp",
                        "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                        "ToPort": "65535"
                    },
                    {
                        "FromPort": "0",
                        "IpProtocol": "udp",
                        "SourceSecurityGroupId": {"Ref": "InternalSecurityGroup"},
                        "ToPort": "65535"
                    }
                ],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "VPC": {
            "Properties": {
                "CidrBlock": {"Ref": "VPCCIDR"},
                "Tags": [{"Key": "Name", "Value": "concourse"}]
            },
            "Type": "AWS::EC2::VPC"
        },
        "VPCGatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {"Ref": "VPCGatewayInternetGateway"},
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "VPCGatewayInternetGateway": {"Type": "AWS::EC2::InternetGateway"},
        "WebELBLoadBalancer": {
            "Properties": {
                "HealthCheck": {
                    "HealthyThreshold": "2",
                    "Interval": "30",
                    "Target": "tcp:8080",
                    "Timeout": "5",
                    "UnhealthyThreshold": "10"
                },
                "Listeners": [
                    {
                        "InstancePort": "8080",
                        "InstanceProtocol": "tcp",
                        "LoadBalancerPort": "80",
                        "Protocol": "tcp"
                    },
                    {
                        "InstancePort": "2222",
                        "InstanceProtocol": "tcp",
                        "LoadBalancerPort": "2222",
                        "Protocol": "tcp"
                    }
                ],
                "SecurityGroups": [{"Ref": "WebSecurityGroup"}],
                "Subnets": [{"Ref": "LoadBalancerSubnet"}]
            },
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
        },
        "WebSecurityGroup": {
            "Properties": {
                "GroupDescription": "Web",
                "SecurityGroupEgress": [],
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "2222",
                        "IpProtocol": "tcp",
                        "ToPort": "2222"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    }
                ],
                "VpcId": {"Ref": "VPC"}
            },
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
